commit2, uploading from local

--- a/articles/templates/html/header.html
+++ b/articles/templates/html/header.html
@@ -3,7 +3,7 @@
 <head>
 
 <title>
-welcome {{request.user.username}}
+FScratch
 </title>
 {% load static %}
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,17 +12,24 @@ welcome {{request.user.username}}
 
 </head>
 
-<body>
+<body style="width: 100%">
 
-<div data-role="page" class="ui-responsive-panel" data-theme="b">
+<div id="myhome" data-role="page" class="ui-responsive-panel" data-theme="b">
 
-<div data-role="panel">
+{% include 'html/left.html' %}
+
+<!-- Home -->
+
+<div data-role="header" data-position="fixed" id="header1">
+<h1>Hi {{request.user.username}}</h1>
+
+<a href="#leftpanel" 
+data-rel="panel"
+data-rol="button"
+data-theme="a"
+data-icon="open"
+class="ui-btn-left">Menu</a>
 
 </div>
 
-<div data-role="header" data-position="fixed">
-<h1>FS</h1>
-
-</div>
-
-<div data-role="content" data-theme="c">
+<div data-role="content" data-theme="b">
