--- a/members/templates/update_form.html
+++ b/members/templates/update_form.html
@@ -1,3 +1,5 @@
+{% include 'html/header.html'  %}
+
 <form method="POST">
   {%csrf_token%}
 
@@ -27,3 +29,5 @@
 
 </table>
 </form>
+
+{% include 'html/header.html'  %}
