--- a/members/templates/update_profile.html
+++ b/members/templates/update_profile.html
@@ -22,16 +22,40 @@
 <td>Username</td><td>{{members.user_name}}</td>
 </tr>
 
+
 <tr>
 <td>Age</td><td><input type="text" name="age" value="{{members.age}}"/> </td>
 </tr>
 
 <tr>
 <td>Phone</td><td><input type="text" name="phone" value="{{members.phone}}"/> </td>
+
+<tr>
+<td>Referal</td><td><input type="text" name="upline" value="{{members.upline}}"/> </td>
+
+<tr>
+<td>Tin</td><td><input type="text" name="tin" value="{{members.tin}}"/> </td>
 </tr>
 
+{% if members.user_name == "admin" %}
+<tr>
+<td>Points</td><td><input type="text" name="points" value="{{members.points}}"/> </td>
+</tr>
 
+<tr>
+<td>Peso</td><td><input type="text" name="money" value="{{members.money}}"/> </td>
+</tr>
 
+{% else %}
+<tr>
+<td>Points</td><td>{{members.points}}</td>
+</tr>
+
+<tr>
+<td>Peso</td><td>{{members.money}}</td>
+</tr>
+
+{%endif%}
 <tr>
 <td colspan="100"><center><input type="submit" value="submit"/></center></td>
 </tr>
