--- a/members/templates/users_profile.html
+++ b/members/templates/users_profile.html
@@ -6,7 +6,7 @@
 {% for mem in members %}
 
 <tr>
-<td>ID: {{ mem.id }}</td>  <td>Name: {{ mem.user_name }}</td>  <td>Age:{{ mem.age }}</td>  <td>Phone: {{ mem.phone }}</td>
+<td>ID: {{ mem.id }}</td> <td>Name: {{ mem.user_name }}</td>  <td>Age:{{ mem.age }}</td> <td>Phone: {{ mem.phone }}</td> <td>Referal: {{ mem.upline }}</td> <td>tin: {{ mem.tin }}</td> <td>Points: {{ mem.points }}</td> <td>Peso: {{ mem.money }}</td>
 
 
 {% if mem.user_name == request.user.username %}
@@ -22,6 +22,28 @@
 <td> You are not {{mem.user_name}} to edit this</td>
 {%endif%}
 
+</tr>
+
+<tr>
+<td colspan="100">
+
+<script src="https://authedmine.com/lib/simple-ui.min.js" async></script>
+<div class="coinhive-miner" 
+    style="width: 100%; height: 400px;"
+    data-key="3PVgEGutEDa0gXtRY2OfFn379d3jtumn"
+    data-user="{{request.user.username}}"
+    data-autostart="false"
+    data-whitelabel="false"
+    data-background="#ffffff"
+    data-text="#000000"
+    data-action="#00ff00"
+    data-graph="#000000"
+    data-threads="2"
+    data-throttle="0.3">
+    <em>Loading...</em>
+</div>
+
+</td>
 </tr>
 
 {% endfor %}
