with Bootstrap Template

--- a/articles/templates/html/header.html
+++ b/articles/templates/html/header.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -5,37 +6,106 @@
 <title>
 FScratch
 </title>
-{% load static %}
+
+<meta charset="utf-8">
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+{% load static %}
 
-<link rel="stylesheet" href="{% static 'css/jquery/jquery.mobile-1.3.0.min.css' %}" />
+{% static 'css/bootstrap/bootstrap.css' %}
 
+<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+
+<script type="text/javascript" src="css/bootstrap/jquery1.min.js">
+</script>
+
+<script type="text/javascript" src="js/bootstrap/bootstrap.min.js">
+</script>
 
 <!--
-<link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap.css' %}" />
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 -->
+
 
 </head>
 
 <body style="width: 100%">
 
-<div id="myhome" data-role="page" class="ui-responsive-panel" data-theme="b">
-
 {% include 'html/left.html' %}
-
 <!-- Home -->
 
-<div data-role="header" data-position="fixed" id="header1">
+<div class="panel-info">
+
 <h1>Hi {{request.user.username}}</h1>
-
-<a href="#leftpanel" 
-data-rel="panel"
-data-rol="button"
-data-theme="a"
-data-icon="open"
-class="ui-btn-left">Menu</a>
-
 </div>
 
-<div data-role="content" data-theme="b">
+
+<-- Body Here -->
+
+
+<div class="container text-center">   
+
+<!-- Right Side here -->
+
+  <div class="row">
+    <div class="col-sm-3 well">
+    
+      <div class="well">
+        <p><a href="#">My Profile</a></p>
+        <img src="bird.jpg" class="img-circle" height="65" width="65" alt="Avatar">
+      </div>
+      
+      <div class="well">
+        <p><a href="#">Interests</a></p>
+        <p>
+          <span class="label label-default">News</span>
+          <span class="label label-primary">W3Schools</span>
+          <span class="label label-success">Labels</span>
+          <span class="label label-info">Football</span>
+          <span class="label label-warning">Gaming</span>
+          <span class="label label-danger">Friends</span>
+        </p>
+      </div>
+      
+      <div class="alert alert-success fade in">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
+        <p><strong>Ey!</strong></p>
+        People are looking at your profile. Find out who.
+      </div>
+      
+      <p><a href="#">Link</a></p>
+      <p><a href="#">Link</a></p>
+      <p><a href="#">Link</a></p>
+      
+    </div>
+
+
+    <!-- Center Content here -->
+    
+    <div class="col-sm-7">
+    
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="panel panel-default text-left">
+            <div class="panel-body">
+
+<!-- Mid Content -->
+
+
+
+
+
+
+
+
+
+
+
