--- a/articles/templates/html/left_content.html
+++ b/articles/templates/html/left_content.html
@@ -7,7 +7,7 @@
 <a href="{% url 'members:login1' %}"><input type="button" value="Login" /></a>
 </li>
 {%else%}
-<li>
+<li class="active">
 <a href="{% url 'articles:home' %}"> <input type="button" value="Home" /> </a>
 </li>
 
