--- a/articles/templates/html/footer.html
+++ b/articles/templates/html/footer.html
@@ -1,28 +1,40 @@
+
+  <!-- Mid Content Here -->
+  
+            </div>
+          </div>
+        </div>
+      </div>
+
+   </div>
+
+    <!-- Left Side here -->
+    <div class="col-sm-2 well">
+      <div class="thumbnail">
+        <p>Upcoming Events:</p>
+        <img src="paris.jpg" alt="Paris" width="400" height="300">
+        <p><strong>Paris</strong></p>
+        <p>Fri. 27 November 2015</p>
+        <button class="btn btn-primary">Info</button>
+      </div>     
+      
+      <div class="well">
+        <p>ADS</p>
+      </div>
+      
+      <div class="well">
+        <p>ADS</p>
+      </div>
+    </div>
+    
+    <!-- Footer Here -->
+    
+  </div>
 </div>
 
-</div>
-{% load static %}
-
-<script type="text/javascript" src="{% static 'js/jquery/jquery-1.9.1.min.js' %}">
-</script>
-
-
-
-<!--
-<script type="text/javascript" src="{% static 'js/bootstrap/bootstrap.js' %}">
-</script>
--->
-
-<script type="text/javascript" src="{% static 'js/jquery/jquery.mobile-1.3.0.min.js' %}">
-</script>
-
-
-
-
-<script type="text/javascript">
-app. initialize();
-</script>
-
+<footer class="container-fluid text-center">
+  <p>Footer Text</p>
+</footer>
 
 </body>
 </html>
