--- a/articles/templates/html/left.html
+++ b/articles/templates/html/left.html
@@ -1,32 +1,50 @@
 <!-- Left Panel -->
 
-<span id="leftpanel"
-data-role="panel"
-data-position-fixed="true"
-data-theme="a"
-data-swipe-open="true"
-data-display="push"
-data-position="left"
-style="background-color: white;" >
+<nav class="navbar navbar-inverse" style="border-radius: 20px;" >
+  <div class="container-fluid" id="leftpanel">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#">Logo</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
 
-<div data-theme="a"
-data-role="header"
-style="border-radius: 20px;" >
-
-<h2>Menu</h2>
-
-<a href="#header1"
-data-rel="close"
-data-role="button"
-data-theme="a"
-data-icon="delete"
-class="ui-btn-right">Close</a>
-</div>
-
-<div data-role="content">
-<ul>
 {% include 'html/left_content.html' %}
-</ul>
-</div>
 
-</span>
+      </ul>
+      <form class="navbar-form navbar-right" role="search">
+        <div class="form-group input-group">
+          <input type="text" class="form-control" placeholder="Search..">
+          <span class="input-group-btn">
+            <button class="btn btn-default" type="button">
+              <span class="glyphicon glyphicon-search"></span>
+            </button>
+          </span>        
+        </div>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> My Account</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
