--- a/members/templates/users_home.html
+++ b/members/templates/users_home.html
@@ -1,17 +1,35 @@
 {% include 'html/header.html'  %}
 
-<table border="1" style="width: 100%;">
+<table border="0" 
+style="background-color: white;
+border-radius: 20px">
+
 {% for usr in users %}
+
 <tr>
-<td>{{ usr.id }}</td>  <td>{{ usr.first_name }}</td>  <td>{{ usr.last_name }}</td>  <td>{{ usr.username }}</td>  <td>{{ usr.email }}</td> 
+<th><ul><li>FirstName</li></ul></th>
+<th><ul><li>LastName</li></ul></th>
+<th><ul><li>Username</li></ul></th>
+<th><ul><li>Email</li></ul></th>
+<th><ul><li>Options</li></ul></th>
+</tr>
+<tr>
+
+<th><ul><li>{{ usr.first_name }}</li></ul></th>  
+<th><ul><li>{{ usr.last_name }}</li></ul></th>  
+<th><ul><li>{{ usr.username }}</li></ul></th>  
+<th><ul><li>{{ usr.email }}</li></ul></th> 
 
 {% if usr.username == request.user.username %}
 <td>
-<a href="{% url 'members:delete' usr.id %}"><input type="button" value="Delete User" /></a>
-<a href="{% url 'members:update' usr.id %}"><input type="button" value="Edit User" /></a>
-<a href="{% url 'members:profile' %}"><input type="button" value="Profile" /></a>
+<ul>
+<li>{{ usr.id }}</li>
+<li><a href="{% url 'members:delete' usr.id %}"><input type="button" value="Delete User" /></a></li>
+<li><a href="{% url 'members:update' usr.id %}"><input type="button" value="Edit User" /></a></li>
+<li><a href="{% url 'members:profile' %}"><input type="button" value="Profile" /></a></li>
 
-<a href="{% url 'articles:home' %}"><input type="button" value="Home" /></a>
+<li><a href="{% url 'articles:home' %}"><input type="button" value="Home" /></a></li>
+</ul>
 </td>
 
 <!-- Profile Start -->
@@ -19,14 +37,21 @@
 
 {% elif request.user.username == "floter1" %}
 <td>
-<a href="{% url 'members:delete' usr.id %}"><input type="button" value="Delete User" /></a>
-<a href="{% url 'members:update' usr.id %}"><input type="button" value="Edit User" /></a>
-<a href="{% url 'members:profile' %}"><input type="button" value="Profile" /></a>
+<ul>
+<li>{{ usr.id }}</li>
+<li><a href="{% url 'members:delete' usr.id %}"><input type="button" value="Delete User" /></a></li>
+<li><a href="{% url 'members:update' usr.id %}"><input type="button" value="Edit User" /></a></li>
+<li><a href="{% url 'members:profile' %}"><input type="button" value="Profile" /></a></li>
 
-<a href="{% url 'articles:home' %}"><input type="button" value="Home" /></a>
+<li><a href="{% url 'articles:home' %}"><input type="button" value="Home" /></a></li>
+</ul>
 </td>
 {%else%}
-<td> You are not {{usr.email}} to edit this</td>
+<td>
+<ul>
+<li>{{ usr.id }}</li>
+</ul>
+</td>
 {%endif%}
 
 
