--- a/articles/templates/html/footer.html
+++ b/articles/templates/html/footer.html
@@ -8,6 +8,44 @@
 
    </div>
 
+    <!-- Left Side here -->
+    <div class="col-sm-2 well">
+      <div class="thumbnail">
+        <p>Upcoming Events:</p>
+        <img src="paris.jpg" alt="Paris" width="400" height="300">
+        <p><strong>Paris</strong></p>
+        <p>Fri. 27 November 2015</p>
+        <button class="btn btn-primary">Info</button>
+      </div>     
+      
+      <div class="well">
+        <p>ADS</p>
+      </div>      
+      <div class="well">
+        <p>ADS</p>
+      </div>
+
+      <div class="well">
+        <p><a href="#">Interests</a></p>
+        <p>
+          <span class="label label-default">News</span>
+          <span class="label label-primary">W3Schools</span>
+          <span class="label label-success">Labels</span>
+          <span class="label label-info">Football</span>
+          <span class="label label-warning">Gaming</span>
+          <span class="label label-danger">Friends</span>
+          
+        </p>
+      </div>
+      
+      <div class="alert alert-success fade in">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">close</a>
+        <p><strong>Ey!</strong></p>
+        {{request.user.username}}
+      </div>
+
+
+    </div>
     
     <!-- Footer Here -->
     
